--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -1,6 +1,8 @@
 \chapter{Normal Forms}
 
-%TODO: define labels on boxes
+
+\TODO{define labels on boxes}
+
 \newbox\contrup\setbox\contrup=\hbox{$
    \divide\atflowunit by6\multiply\atflowunit by3\afsetunits
    \atomicflow{(0,0)*{\afacu{}{}{}{}{}{}}}$}
@@ -91,6 +93,8 @@ An atomic flow is \emph{streamlined} if it can be represented as
 }\quad.
 \]
 \end{definition}
+
+\TODO{A streamlined atomic flow with no pair of upper (resp., lower) edges with an $ai$-path between them is cut (resp., axiom) free.}
 
 %---------------------------------------
 \begin{proposition}
