--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -5,23 +5,21 @@
 \newcommand{\frpb}{{\mathsf{pb}}}
 %---------------------------------------
 \begin{definition}\label{DefPathBreaker}
-We define the reduction $\to_\frpb$ (where $\frpb$ stands for \emph{path breaker}) as follows, for any two atomic flows $\phi$, with upper edges $\lambda$ and $\boldsymbol\epsilon$, and lower edges $\mu$ and $\boldsymbol\iota$; and $\psi$ with upper edges $\lambda$ and $\boldsymbol{\epsilon'}$ and lower edges $\mu'$ and $\boldsymbol{\iota'}$:
+We define the reduction $\to_\frpb$ (where $\frpb$ stands for \emph{path breaker}) as follows, for any two atomic flows $\phi$, with upper edges $\boldsymbol\epsilon$ and lower edges $\boldsymbol\iota$, and $\psi$ with upper edges $\boldsymbol{\epsilon'}$ and lower edges $\boldsymbol{\iota'}$:
 \[
 \atomicflow
 {
-(-8, 6)*{\afvjdm{4}{\boldsymbol\epsilon}{}};
-(-2, 6)*{\afvjd{4}{\lambda}{}};
-( 2, 6)*{\afvjd{4}{}{\lambda'}};
-( 8, 6)*{\afvjdm{4}{}{\boldsymbol{\epsilon'}}};
+(-8, 7)*{\afvjdm{6}{\boldsymbol\epsilon}{}};
+( 0, 8)*{\afaid{}{}{}{}{}{}};
+( 8, 7)*{\afvjdm{6}{}{\boldsymbol{\epsilon'}}};
 (-5, 0)*{\affr{8}{8}};
 (-4, 2)*{\aflabelright\phi};
 %---
 ( 5, 0)*{\affr{8}{8}};
 ( 6, 2)*{\aflabelright{\psi}};
-( 8,-6)*{\afvjum{4}{}{\boldsymbol{\iota'}}};
-(-2,-6)*{\afvju{4}{\mu}{}};
-( 2,-6)*{\afvju{4}{}{\mu'}};
-(-8,-6)*{\afvjum{4}{\boldsymbol\iota}{}};
+( 8,-7)*{\afvjum{6}{}{\boldsymbol{\iota'}}};
+( 0,-8)*{\afaiu{}{}{}{}{}{}};
+(-8,-7)*{\afvjum{6}{\boldsymbol\iota}{}};
 }
 \quad\to_\frpb\quad
 \atomicflow
@@ -42,8 +40,7 @@ We define the reduction $\to_\frpb$ (where $\frpb$ stands for \emph{path breaker
 (0,0)="A";
 "A"+(-11,-14)*{\afcjrmcol{6}{20}{Red}};
 "A"+(11,-14)*{\afcjlmcol{6}{20}{Red}};
-"A"+(-2, 11.5)*{\afvjdcol{15}{\lambda}{}{Red}};
-"A"+( 2, 11.5)*{\afvjdcol{15}{}{\lambda'}{Red}};
+"A"+( 0,  8)*{\afaidcol{}{}{}{}{}{}{Red}{Red}};
 "A"+(-2, -8)*{\afawucol{}{}{}{}{}{Red}};
 % join one
 "A"+(2,-10)*{\afvjcol{12}{Red}};
@@ -71,8 +68,7 @@ We define the reduction $\to_\frpb$ (where $\frpb$ stands for \emph{path breaker
 "A"+"D"="A";
 "A"+(-11,14)*{\afcjlmcol{6}{20}{OliveGreen}};
 "A"+(11,14)*{\afcjrmcol{6}{20}{OliveGreen}};
-"A"+(-2,-11.5)*{\afvjucol{15}{\mu}{}{OliveGreen}};
-"A"+( 2,-11.5)*{\afvjucol{15}{}{\mu'}{OliveGreen}};
+"A"+( 0,-8)*{\afaiucol{}{}{}{}{}{}{OliveGreen}{OliveGreen}};
 "A"+( 2, 8)*{\afawdcol{}{}{}{}{}{OliveGreen}};
 %%%%% BLACK %%%%%
 %% cocontractions
@@ -117,85 +113,83 @@ We define the reduction $\to_\frpb$ (where $\frpb$ stands for \emph{path breaker
 "A"+(-4, 2)*{\aflabelright{\phi}};
 "A"+( 5, 0)*{\affr{8}{8}};
 "A"+( 6, 2)*{\aflabelright{\psi}};
-}\quad.
+}\quad,
 \]
+where the evidenced interaction and cut vertices belong to the same connected component.
 \end{definition}
 
 \begin{theorem}
 Reduction $\to_\frpb$ is sound.
 \end{theorem}
 
+\TODO{Define `evidenced'.}
+
 \begin{proof}
 Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\frpb\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\ref{DefPathBreak}.
-\end{proof}
 
-\newcommand{\Break}{\mathsf{Break}}
-\begin{definition}\label{DefPathBreak}
-The \emph{path breaker}, $\Break$, is an operator whose arguments are a derivation $\vlder{\Phi}{}{\beta}{\alpha}$ and the atom occurrences $a^\lambda$ and $a^\mu$, such that $\alpha=\vlsmallbrackets\vls([a^\lambda.\bar a].\gamma)$, $\beta=\vls[\delta.(a^\mu.\bar a)]$, and the results are a derivation and two atom occurrences $a^\epsilon$ and $a^\iota$ such that $\Break(\Phi,a^\lambda,a^\mu)=(\Psi,a^\epsilon,a^\iota)$, where:
+Since the evidenced interaction and cut vertices belong to the same connected component, we can assume that the $\ai$-decomposed form of $\Phi$ is
+\[
+\vlder{\Phi'}{}
+{
+ \vls[\beta\;.\;\vlinf{}{}{\fff}{\vls(a^\phi.\bar a^\psi)}]
+}
+{
+ \vls(\vlinf{}{}{\vls[a^\phi.\bar a^\psi]}{\ttt}\;.\;\alpha)
+}\quad.
+\]
+We combine three copies of $\Phi'$ to obtain the desired derivation $\Psi$ with flow $\psi'$ and the same premiss and conclusion as $\Phi$:
 \newbox\DeltaTopK
 \setbox\DeltaTopK=
 \hbox{$
-\vlderivation
+\vlder{\Phi'}{}
 {
- \vlin{=}{}{\vls[\delta.(\vlinf{}{}{\ttt}{a^{\mu'}}.\bar a)]}
- {
-  \vlde{\Phi}{}{\beta}
-  {
-   \vlhy{\alpha}
-  }
- }
-}$
+ \vls[\beta\;.\;(\vlinf{}{}{\ttt}{a^\phi}\;.\;\bar a^\psi)]
 }
+{
+ \vls(\vlinf{}{}{\vls[a^\phi.\bar a^\psi]}{\ttt}\;.\;\alpha)
+}
+$}
 \newbox\DeltaK
 \setbox\DeltaK=
 \hbox{$
-\vlderivation
+\vlder{\Phi'}{}
 {
- \vlin{=}{}{\vls[\delta.(a^{\epsilon'}.\vlinf{}{}{\ttt}{\bar a})]}
- {
-  \vlde{\Phi}{}{\beta}
-  {
-   \vlin{=}{}{\alpha}
-   {
-    \vlhy{\vls([\vlinf{}{}{a^{\lambda'}}{\fff}.\bar a].\gamma)}
-   }
-  }
- }
-}$
+ \vls[\beta\;.\;(a^\phi.\vlinf{}{}{\ttt}{\bar a^\psi})]
 }
+{
+ \vls([\vlinf{}{}{a^\phi}{\fff}\;.\;\bar a^\psi]\;.\;\alpha)
+}
+$}
 \newbox\DeltaBotK
 \setbox\DeltaBotK=
 \hbox{$
-\vlderivation
+\vlder{\Phi'}{}
 {
- \vlde{\Phi}{}{\beta}
- {
-  \vlin{=}{}{\alpha}
-  {
-   \vlhy{\vls([a^{\epsilon'}.\vlinf{}{}{\bar a}{\fff}].\gamma)}
-  }
- }
-}$
+ \vls[\beta.\vlinf{}{}{\fff}{\vls(a^\phi.\bar a^\psi)}]
 }
+{
+ \vls([a^\phi\;.\;\vlinf{}{}{\bar a^\psi}{\fff}]\;.\;\alpha)
+}
+$}
 \[
 \Psi\quad=\quad
 \vlderivation
 {
- \vlin{=}{}{\vls[\vlinf{2\cdot\cod}{}{\delta}{\vls[\delta.\delta.\delta]}\;.\;(a^\iota.\bar a)]}
+ \vlin{2\cdot\cod}{}{\beta}
  {
-  \vlin{=}{}{\vlsbr[\delta\;\;\;.\;\;\;\delta\;\;\;.\;\;\;\box\DeltaBotK]}
+  \vlin{=}{}{\vlsbr[\beta\;\;\;\;.\;\;\;\;\beta\;\;\;\;.\;\;\;\;\box\DeltaBotK]}
   {
-   \vlin{\swi}{}{\vlsmallbrackets\vls[(\gamma.a^{\epsilon'}).[\delta.\delta]]}
+   \vlin{\swi}{}{\vlsmallbrackets\vls[(\alpha.a^\phi).[\beta.\beta]]}
    {
-    \vlin{=}{}{\vlsmallbrackets\vls(\gamma.[a^{\epsilon'}.[\delta.\delta]])}
+    \vlin{=}{}{\vlsmallbrackets\vls(\alpha.[a^\phi.[\beta.\beta]])}
     {
-     \vlin{=}{}{\vlsbr([\delta\;\;\;\;\;.\;\;\;\;\;\box\DeltaK]\;\;\;\;\;.\;\;\;\;\;\gamma)}
+     \vlin{=}{}{\vlsbr([\beta\;\;\;\;.\;\;\;\;\box\DeltaK]\;\;\;\;.\;\;\;\;\alpha)}
      {
-      \vlin{=}{}{\vls(\vlinf{\swi}{}{\vls[(\gamma.\bar a).\delta]}{\vls(\gamma.[\bar a.\delta])}\;.\;\gamma)}
+      \vlin{=}{}{\vls(\vlinf{\swi}{}{\vlsmallbrackets\vls[(\alpha.\bar a^\psi).\beta]}{\vlsmallbrackets\vls(\alpha.[\bar a^\psi.\beta])}\;.\;\alpha)}
       {
-       \vlin{=}{}{\vlsbr(\box\DeltaTopK\;\;\;.\;\;\;\gamma\;\;\;.\;\;\;\gamma)}
+       \vlin{2\cdot\cou}{}{\vlsbr(\box\DeltaTopK\;\;\;\;.\;\;\;\;\alpha\;\;\;\;.\;\;\;\;\alpha)}
        {
-        \vlhy{\vls([a^\epsilon.\bar a]\;.\;\vlinf{2\cdot\cou}{}{\vls(\gamma.\gamma.\gamma)}{\gamma})}
+        \vlhy{\alpha}
        }
       }
      }
@@ -203,42 +197,21 @@ The \emph{path breaker}, $\Break$, is an operator whose arguments are a derivati
    }
   }
  } 
-}\quad,
+}\quad.
 \]
-where $\epsilon$, $\lambda'$ and $\epsilon'$ correspond to $\lambda$ and $\mu'$, $\epsilon'$ and $\iota$ correspond to $\mu$ in the atomic flow of $\Phi$.
-\end{definition}
+\end{proof}
+
+\TODO{Find a way to define `evidenced' so this makes sense...}
 
 \begin{proposition}\label{PropPathBreak}
-If, for some flows $\phi$ and $\psi$, the atomic flow of $\vlder{\Phi}{}{\vlsmallbrackets\vls[\beta.(a^{\mu}.\bar a^{\mu'})]}{\vlsmallbrackets\vls([a^{\lambda}.\bar a^{\lambda'}].\alpha)}$ is of shape
-\[
-\atomicflow
-{
-(-8, 6)*{\afvjm{4}};
-(-2, 6)*{\afvju{4}{\lambda}{}};
-( 2, 6)*{\afvju{4}{}{\lambda'}};
-( 8, 6)*{\afvjm{4}};
-(-5, 0)*{\affr{8}{8}};
-(-4, 2)*{\aflabelright\phi};
-%---
-( 5, 0)*{\affr{8}{8}};
-( 6, 2)*{\aflabelright{\psi}};
-( 8,-6)*{\afvjm{4}};
-(-2,-6)*{\afvjd{4}{\mu}{}};
-( 2,-6)*{\afvjd{4}{}{\mu'}};
-(-8,-6)*{\afvjm{4}};
-}\quad,
-\]
-and if\/ $\Break(\Phi,a^\lambda,a^\mu)=\left(\vlder{\Psi}{}{\beta}{\alpha},a^\epsilon,a^\iota\right)$, where $\alpha=\vlsmallbrackets\vls([a^\epsilon.\bar a^{\epsilon'}].\gamma)$ and $\beta=\vlsmallbrackets\vls[\delta.(a^\iota.\bar a^{\iota'})]$, then
+Given atomic flows $\phi$ and $\psi$, such that $\phi\to_\frpb\psi$, then
 \begin{itemize}
-	\item there are no paths from $\epsilon$ to $\iota$ and no paths from $\epsilon'$ to $\iota'$ in the atomic flow of\/ $\Psi$; and
-	\item there are no paths from an upper path $\epsilon''$ to a lower path $\iota''$ in the atomic flow of $\Psi$ unless there is a path from the corresponding upper path $\lambda''$ to the lower path $\mu''$ in the atomic flow of $\Phi$.
+ \item there is no path from the evidenced interaction vertex to the evidenced cut vertex in $\psi$, and
+ \item there is a path from the upper edge $\epsilon$ to the lower edge $\iota$ of $\psi$ if and only if there is a path from the upper edge $\epsilon$ to the lower edge $\iota$ of $\phi$.
 \end{itemize}
 \end{proposition}
 
-\begin{figure}
-\caption{The atomic flows of $\Phi$ (left) and $\Psi$ (right) such that $\Break(\Phi,a^\lambda,a^\mu)=(\Psi,a^\epsilon,a^\iota)$.}
-\label{FigFlowBreak}
-\end{figure}
+\TODO{Redo proof.}
 
 \begin{proof}
 Refer to the atomics in Figure~\ref{FigFlowBreak}.
