Added temporary theorem about properties of \frmis

--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -90,6 +90,12 @@ We define the reduction $\to_\frmis$ (where $\frmis$ stands for \emph{multiple i
 for  some flows $\gamma_0$, $\dots$, $\gamma_n$, $\delta_1$, $\dots$, $\delta_n$, which do not contain interaction or cut vertices, where, for each $1\le i\le n$, the subflow $\psi_i$ is connected and does not contain any interaction or cut vertices.
 \end{definition}
 
+\TODO{Redo this theorem:}
+
+\begin{theorem}
+Given a set of formulae $\gamma_{i,k}$ such that $\dots$, let $\gamma_k$ be the atomic flow of $\Gamma_k$ and $\delta_k$ be the atomic flow consisting of, for every $1\le i\le n$, $|\gamma_{i,k}|$ copies of $\psi_i$, then $\to_\frmis$ is sound.
+\end{theorem}
+
 
 \TODO{Change this introduction}
 
