--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -1,10 +1,8 @@
 \TODO{Throughout: use `isolated subflow' and define it somewhere else.}
 
-\TODO{Change the following definition to be inline with notation and conventions in the rest of the thesis.}
+\TODO{Define `simple subflow' and make sure we use that instead of simple edge elsewhere.}
 
-\TODO{Change the definition to show a simple sub flow instead of a simple edge.}
-
-\TODO{Define simple subflow and make sure we use that instead of simple edge elsewhere.}
+\TODO{Do I need to put: `for some upper edges $\boldsymbol\epsilon$ and lower edges $\boldsymbol\iota$' in the following definition?}
 
 \newcommand{\fris}{{\mathsf{is}}}
 %---------------------------------------
@@ -36,7 +34,7 @@ We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated sub
 ( 0,-16  )*{\afacdmexsq{}{}{}{}{}{\boldsymbol\iota}{12}{4}};
 }\quad,
 \]
-for some upper edges $\boldsymbol\epsilon$ and lower edges $\boldsymbol\iota$, where $\psi$ is a connected subflow not containing any interaction or cut vertices.
+where $\psi$ is a connected subflow not containing any interaction or cut vertices.
 \end{definition}
 
 %---------------------------------------
@@ -47,6 +45,8 @@ Reduction\/ $\to_\fris$ is sound.
 \TODO{Put reference to definition of general contraction.}
 
 \TODO{Make a remark somewhere about the kind of trickery we do here with the $\ai$-decomposed form and Formalism A notation.}
+
+\TODO{Is it ok to refer to the definition in this way and then use the labels we defined there? (this is the way it was done in the paper).}
 
 %---------------------------------------
 \begin{proof}
