--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -1,13 +1,11 @@
 \TODO{Throughout: use `isolated subflow' and define it somewhere else.}
 
-\TODO{Define `simple subflow' and make sure we use that instead of simple edge elsewhere.}
-
 \TODO{Do I need to put: `for some upper edges $\boldsymbol\epsilon$ and lower edges $\boldsymbol\iota$' in the following definition?}
 
 \newcommand{\fris}{{\mathsf{is}}}
 %---------------------------------------
 \begin{definition}\label{DefIsoSubRem}
-We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated subflow}) as follows, for any two atomic flows $\phi$ and $\psi$:
+We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated subflow}) as follows, for any atomic flow $\phi$ and any connected atomic flow $\psi$:
 \[
 \atomicflow{
 (-8, 6)*{\afvjdm4{}{\boldsymbol\epsilon}};
@@ -32,9 +30,8 @@ We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated sub
 ( 0,-14  )*{\afawu{}{}{}{}};
 ( 6, -4  )*{\afvjm{12}};
 ( 0,-16  )*{\afacdmexsq{}{}{}{}{}{\boldsymbol\iota}{12}{4}};
-}\quad,
+}\quad.
 \]
-where $\psi$ is a connected subflow not containing any interaction or cut vertices.
 \end{definition}
 
 %---------------------------------------
@@ -67,7 +64,7 @@ for some atom $a$ and formulae $\alpha$ and $\beta$.
 We obtain the two derivations $\Phi_\ttt$ and $\Phi_\fff$ from $\Phi'$ as follows:
 \[
 \Phi_\ttt\;=\;
-\vlder{\Phi'\{\bar a^\psi/\ttt\}}{}
+\vlder{\Phi'\{a^\psi/\fff, \bar a^\psi/\ttt\}}{}
 {
  \vls[\beta.a]
 }
@@ -76,7 +73,7 @@ We obtain the two derivations $\Phi_\ttt$ and $\Phi_\fff$ from $\Phi'$ as follow
 }
 \quad\mbox{and}\quad
 \Phi_\fff\;=\;
-\vlder{\Phi'\{\bar a^\psi/\fff\}}{}
+\vlder{\Phi'\{a^\psi/\ttt, \bar a^\psi/\fff\}}{}
 {
  \vls[\beta.(a.\fff)]
 }
@@ -84,7 +81,7 @@ We obtain the two derivations $\Phi_\ttt$ and $\Phi_\fff$ from $\Phi'$ as follow
  \vls(a.\alpha)
 }\quad.
 \]
-Since $\psi$ is connected and contains no interaction or cut vertices the mapping from occurrences of $\bar a^\psi$ to edges of $\psi$ is surjective. Hence we know that both derivation $\Phi_\ttt$  and $\Phi_\fff$ have flow $\phi$. We combine $\Phi_\ttt$ and $\Phi_\fff$ to get the desired derivation $\Psi$ with flow $\psi'$ and the same premiss and conclusion as $\Phi$:
+Since $\psi$ is connected, the mapping from occurrences of $a^\psi$ and $\bar a^\psi$ to edges of $\psi$ is surjective. Hence, we know that both derivation $\Phi_\ttt$  and $\Phi_\fff$ have flow $\phi$. We combine $\Phi_\ttt$ and $\Phi_\fff$ to get the desired derivation $\Psi$ with flow $\psi'$ and the same premiss and conclusion as $\Phi$:
 \[
 \Psi\;=\;
 \vlderivation
